[project]
name = "mcp-server-bioRxiv"
version = "0.1.0"
description = "An MCP server for searching and retrieving articles from bioRxiv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
    "requests>=2.25.1",
    "beautifulsoup4>=4.9.3",
]

[project.scripts]
biorxiv-mcp-server = "biorxiv_mcp_server.biorxiv_server:main"
biorxiv-web-search = "biorxiv_mcp_server.biorxiv_web_search:run_biorxiv_web_search_cli"
